--- a/ci/ROS/Dockerfile_ROS
+++ b/ci/ROS/Dockerfile_ROS
@@ -28,7 +28,7 @@ RUN cd kpsr-core \
        -DKPSR_WITH_CODE_METRICS=true -DCMAKE_PREFIX_PATH=/opt/klepsydra/thirdparties\
        -DCMAKE_BUILD_TYPE=Debug ..\
     && make \
-    && bash ../kpsr-build/scripts/make_cppcheck.sh \
+    && bash ../kpsr-build/scripts/make_cppcheck.sh kpsr-core \
     && make test_coverage_cobertura ARGS="-V" \
     && make doc \
     && make install
@@ -52,6 +52,7 @@ LABEL BUILD_ID=${BUILD_ID}
 FROM ubuntu:18.04
 
 COPY --from=builder /usr/local/include/klepsydra/ /usr/local/include/klepsydra/
+COPY --from=builder /usr/local/include/kpsr_3parties/ /usr/local/include/kpsr_3parties/
 COPY --from=builder /usr/local/lib/cmake/klepsydra/ /usr/local/lib/cmake/klepsydra/
 COPY --from=builder /usr/local/lib/libkpsr* /usr/local/lib/
 COPY --from=builder /opt/klepsydra/ /opt/klepsydra/
